[gd_scene load_steps=2 format=3 uid="uid://ddo538bhvuq0x"]

[ext_resource type="Script" path="res://layer_menu_bar.gd" id="1_7utft"]

[node name="LayerMenuBar" type="MenuBar"]
offset_left = 8.0
offset_top = 9.0
offset_right = 314.0
offset_bottom = 42.0
script = ExtResource("1_7utft")
metadata/_edit_group_ = true

[node name="Background" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Background"

[node name="Player Area" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 1.0
offset_right = 201.0
offset_bottom = 32.0
text = "Player Area"

[node name="Foreground" type="Button" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 1.0
offset_right = 304.0
offset_bottom = 32.0
text = "Foreground"

[connection signal="pressed" from="Background" to="." method="_on_background_pressed"]
[connection signal="pressed" from="Player Area" to="." method="_on_player_area_pressed"]
[connection signal="pressed" from="Foreground" to="." method="_on_foreground_pressed"]
